chore: package.json: add files field

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "description": "A Felid.js plugin for parsing XML body",
   "main": "src/index.js",
+  "files": [
+    "src"
+  ],
   "scripts": {
     "lint": "standard --fix src/*.js test/*.js | snazzy",
     "test": "npm run lint && npm run unit",
