--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "fast-xml-parser": "^3.14.0"
   },
   "devDependencies": {
-    "felid": "^0.0.3",
+    "felid": "^0.1.0-alpha.5",
     "injectar": "^1.3.0",
     "jest": "^24.9.0",
     "pre-commit": "^1.2.2",
