--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
   "engines": {
     "node": ">= 10.0"
   },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
+  },
   "standard": {
     "env": [
       "jest"
